...
  return (
    <BGGradient
      colorInit={'#7646c9'}
      colorEnd={colors.dark}
      angle={160}
      angleCenter={{ x: 0.7, y: 0.9 }}>
      <View style={styles.container} testID="welcome-screen">
        <View style={styles.titleBox}>
          <AppText style={styles.title}>{t('welcome-title')} </AppText>
          <AppText style={styles.subTitle}>{t('welcome-subtitle')}</AppText>
          <Separator border={false} height={60} />
        </View>
        <View style={styles.titleBox}>
...
                height: SCREEN.heightFixed * 20,
              }}
              onPress={handleBiometricLogin}
            />
          )}
          <ButtonWithIcon
            testID="welcome-email-login-button"
            accessibilityLabel={t('accessibility-email-login')}
            buttonStyles={{ backgroundColor: colors.light }}
            title={t('with-email')}
            Icon={MailIcon}
            iconProps={{
              width: SCREEN.widthFixed * 20,
...
