...
      {title && <AppText style={styles.title}>{title}</AppText>}
      <Separator border={false} height={12} />
      <AppText style={styles.message}>{message}</AppText>
      <Separator border={false} height={60} />
      <View style={styles.buttonBox}>
        <Button
          testID="cancel-button"
          title={cancelLabel}
          onPress={onCancel}
          style={styles.buttonSize}
          buttonStyles={styles.noButton}
          textStyles={styles.noTextButton}
        />
...
