...
    await markBiometricDeclined();
    setShowBiometricModal(false);
  };

  return (
    <>
      <SafeAreaView style={styles.container} testID="home-screen">
        <HeaderHome />
        <Separator border={false} />
        <UserInfoCard user={user!} onPress={handlePressToProfile} />
        <Separator border={false} />
        <SessionExpCard />
      </SafeAreaView>
...
